--- a/.classpath
+++ b/.classpath
@@ -7,5 +7,6 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="lib/mysql-connector-java-8.0.23.zip"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
